--- a/contact-me.html
+++ b/contact-me.html
@@ -12,7 +12,7 @@
     <p>08498252002</p>
     <p>myemail@gmail.com</p>
     <hr>
-    <form action="mailto:badadeepthi07@gmail.com" method="post" enctype="text/plain">
+    <form action="mailto:badadeepthi@gmail.com" method="post" enctype="text/plain">
         <label>Your Name:</label>
         <input type="text" name="yourName"><br>
         <label>Your Email:</label>
